[gd_scene load_steps=17 format=3 uid="uid://cbxw4waw7w31h"]

[ext_resource type="Script" uid="uid://dtajyiuit8k3l" path="res://scenes/Training/evasion_game.gd" id="1_v5eq2"]
[ext_resource type="SpriteFrames" uid="uid://bo5gw23lpckyb" path="res://resources/player_sprite_frames_baby.tres" id="2_4smh8"]
[ext_resource type="Texture2D" uid="uid://cj2e6yl8g5usj" path="res://assets/sprites/ui/buttons/StartButton.png" id="2_7idru"]
[ext_resource type="Texture2D" uid="uid://cknf5tc6ldffs" path="res://assets/sprites/ui/Boards/ResultsBoard_002.png" id="2_mqcj6"]
[ext_resource type="Texture2D" uid="uid://jc8mrlr7lgmp" path="res://assets/sprites/backgounds/Forest_Floor_001.png" id="3_4smh8"]
[ext_resource type="Texture2D" uid="uid://cl4jmaqinlot2" path="res://assets/sprites/ui/buttons/JumpButton.png" id="3_f2hgq"]
[ext_resource type="Texture2D" uid="uid://yh7s0k4la210" path="res://assets/sprites/ui/buttons/BackButton.png" id="4_rst5h"]
[ext_resource type="Texture2D" uid="uid://dfidio32ldfd7" path="res://assets/sprites/backgounds/BackgroundDevice.png" id="5_7idru"]
[ext_resource type="Texture2D" uid="uid://xp34w7wbuj17" path="res://assets/sprites/Objects/Cartel_01.png" id="5_mqcj6"]
[ext_resource type="Texture2D" uid="uid://cmbs3x0w8pac7" path="res://assets/sprites/ui/clouds/cloud_01.png" id="10_fu8mp"]
[ext_resource type="Texture2D" uid="uid://bu6ctqbkqqlc7" path="res://assets/sprites/ui/clouds/cloud_02.png" id="11_x1b72"]
[ext_resource type="Texture2D" uid="uid://bxs303nqmfemb" path="res://assets/sprites/ui/Backgrounds/Sky_001.png" id="12_x1b72"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7idru"]
size = Vector2(84, 48.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mqcj6"]
size = Vector2(721, 55)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f2hgq"]
size = Vector2(720.5, 55)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rst5h"]
size = Vector2(84, 189)

[node name="EvasionGame" type="Node2D"]
script = ExtResource("1_v5eq2")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ResultsBoard" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(362, 226)
scale = Vector2(9, 9)
texture = ExtResource("2_mqcj6")

[node name="Instructions" type="Label" parent="CanvasLayer"]
offset_left = 125.0
offset_top = 132.0
offset_right = 601.0
offset_bottom = 307.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
offset_left = 142.0
offset_top = 220.0
offset_right = 358.0
offset_bottom = 280.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpeedLabel" type="Label" parent="CanvasLayer"]
offset_left = 140.0
offset_top = 146.0
offset_right = 371.0
offset_bottom = 206.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 56
horizontal_alignment = 1
vertical_alignment = 1

[node name="ResultLabel" type="Label" parent="CanvasLayer"]
offset_left = 130.0
offset_top = 129.0
offset_right = 583.0
offset_bottom = 316.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 56
horizontal_alignment = 1
vertical_alignment = 1

[node name="JumpButton" type="Button" parent="CanvasLayer"]
offset_left = 253.0
offset_top = 1120.0
offset_right = 509.0
offset_bottom = 1247.0
icon = ExtResource("3_f2hgq")
flat = true
icon_alignment = 1
expand_icon = true

[node name="BackButton" type="Button" parent="CanvasLayer"]
offset_left = 252.0
offset_top = 1118.0
offset_right = 388.0
offset_bottom = 1190.0
scale = Vector2(2, 2)
icon = ExtResource("4_rst5h")
flat = true
icon_alignment = 1

[node name="StartButton" type="Button" parent="CanvasLayer"]
offset_left = 253.0
offset_top = 1120.0
offset_right = 512.0
offset_bottom = 1247.0
icon = ExtResource("2_7idru")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(208, 828)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
scale = Vector2(7, 7)
sprite_frames = ExtResource("2_4smh8")
animation = &"standing"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
visible = false
position = Vector2(7, 31.25)
shape = SubResource("RectangleShape2D_7idru")

[node name="WorldMovement" type="Node2D" parent="."]

[node name="Ground" type="StaticBody2D" parent="WorldMovement"]
position = Vector2(0, 981)

[node name="Sprite2D" type="Sprite2D" parent="WorldMovement/Ground"]
texture = ExtResource("3_4smh8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldMovement/Ground"]
visible = false
position = Vector2(0.5, -69.5)
shape = SubResource("RectangleShape2D_mqcj6")

[node name="Ground2" type="StaticBody2D" parent="WorldMovement"]
position = Vector2(720, 981)

[node name="Sprite2D" type="Sprite2D" parent="WorldMovement/Ground2"]
texture = ExtResource("3_4smh8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldMovement/Ground2"]
visible = false
position = Vector2(0.25, -69.5)
shape = SubResource("RectangleShape2D_f2hgq")

[node name="ObstacleTemplate" type="Area2D" parent="WorldMovement"]
position = Vector2(-201, 771)

[node name="Sprite2D" type="Sprite2D" parent="WorldMovement/ObstacleTemplate"]
scale = Vector2(7, 7)
texture = ExtResource("5_mqcj6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldMovement/ObstacleTemplate"]
visible = false
position = Vector2(0, 17.5)
shape = SubResource("RectangleShape2D_rst5h")

[node name="ObstacleSpawner" type="Node2D" parent="WorldMovement"]
position = Vector2(796, 772)

[node name="BackgorundDevice" type="Node2D" parent="."]

[node name="BackgroundMain" type="Sprite2D" parent="."]
position = Vector2(360, 640)
texture = ExtResource("5_7idru")

[node name="CloudMovement" type="Node2D" parent="."]
z_index = -2
position = Vector2(-200, 300)
scale = Vector2(5, 5)

[node name="Cloud1" type="Sprite2D" parent="CloudMovement"]
texture = ExtResource("10_fu8mp")

[node name="Cloud2" type="Sprite2D" parent="CloudMovement"]
position = Vector2(4.9999995, 31.199999)
texture = ExtResource("11_x1b72")

[node name="Background" type="Node2D" parent="."]
z_index = -5
position = Vector2(360, 500)

[node name="Sprite2D" type="Sprite2D" parent="Background"]
z_index = -1
position = Vector2(0.00014522672, -32.250008)
scale = Vector2(22.5, 13.4765625)
texture = ExtResource("12_x1b72")

[connection signal="pressed" from="CanvasLayer/JumpButton" to="." method="_on_jump_button_pressed"]
[connection signal="pressed" from="CanvasLayer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="CanvasLayer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="body_entered" from="WorldMovement/ObstacleTemplate" to="." method="_on_obstacle_template_body_entered"]
